<resources>
    <string name="app_name">Firecast</string>
    <string name="title_activity_filter_oc">Filtrar Ocorrências</string>
    <string name="title_ocurrence_details">Ocorrência</string>

    <!-- NavigationButtonView-->
    <string name="title_occurrence">Ocorrências</string>
    <string name="title_radio_online">Rádio</string>
    <string name="title_map">Mapa</string>

    <!-- Pop-up-->
    <string name="popup">Defina a cidade ou raio de abrangência</string>

    <!-- Map-->
    <string name="google_maps_id">AIzaSyDyJwKZ0CI0vgKk4l08JY5ooOQI8ejX1rQ</string>
    <string name="title_activity_distance_radius_maps">Map</string>
    <string name="title_radius_map">Definir Abrangência</string>
    <string name="distance_km_seek">Raio(KM)</string>
    <string name="city_spinner">Cidade</string>
    <string name="share_using">Compartilhar utilizando:</string>
    <string name="title_details_map">Detalhes da Ocorrência </string>


    <!-- Radio-->
    <string name="radio_type">Tipo</string>
    <string name="radio_title">Rádio Firecast</string>
    <string name="radio_description">O Rádio Firecast permite que você acompanhe a comunicação dos bombeiros da sua cidade
    Para isso, selecione a sua cidade, e (explicar o interno e externo)</string>

    <!-- NavigationDrawer-->
    <string name="action_filter">Filtro</string>
    <string name="action_done">Filtrar</string>

    <!-- -->
    <string name="about_firecast">Visando a inovação tecnológica no atendimento às emergências, a Divisão de Tecnologia da Informação (DiTI) do CBMSC desenvolveu o FireCast</string>
    <string name="about_firecast_community">O FireCast Comunidade é uma nova ferramenta para compartilhamento de informações sobre as solicitações de emergência do CBMSC em atendimento. Disponível para download gratuito na loja virtual Google Play, a versão permite o compartilhamento das informações iniciais da ocorrência nas redes sociais de interesse. Agora o usuário pode rapidamente compartilhar as informações por meio do Whatsapp, Telegram, e-mail, Hangouts, Twitter entre outros.</string>
    <string name="description">Descrição</string>
    <string name="subject">Assunto</string>

    <!-- facebook-->
    <string name="facebook_app_id">204358900107603</string>
    <string name="fb_login_protocol_scheme">fb204358900107603</string>

    <!-- user-->
    <string name="login">login</string>
    <string name="password">senha</string>
    <string name="email">E-mail</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="name">nome</string>
    <string name="confirm_password">confirma</string>

    <!-- details occurence-->
    <string name="street">rua</string>
    <string name="reference">referência</string>
    <string name="city">cidade</string>
    <string name="situation">situação</string>

    <!-- team-->
    <string name="developer_group">Desenvolvedores</string>
    <string name="sspsc_group">SSPSC</string>
    <string name="ux_group">UX | UI | Visual Designer</string>
    <string name="developer">Desenvolvedor</string>
    <string name="firefighter">Bombeiro Militar</string>
    <string name="itdirector">Diretora de TI</string>
    <string name="designer">Designer and Illustrator</string>
    <string name="team_ana">Ana Luiza Goes</string>
    <string name="team_cassio">Cássio Waltrick</string>
    <string name="team_gabriela">Gabriela Alice</string>
    <string name="team_bonet">Eduardo Bonet</string>
    <string name="team_alain">Alain Frantz</string>
    <string name="team_juliana">Juliana Kretzer</string>
    <string name="team_priscila">Priscila Mangaroni</string>
    <string name="team_jean">Jean Menezes</string>

    <!-- butoon-->
    <string name="btn_save">Salvar</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_radio">Rádio</string>

    <!-- Tipos de ocorrências-->
    <string name="occurence_type_single">Tipo de Ocorrência</string>
    <string name="occurence_type">Tipos de Ocorrências</string>
    <string name="oc_accident_car">Acidente de Trânsito</string>
    <string name="oc_paramedics">Atendimento pré-hospitalar</string>
    <string name="oc_support">Auxílios/Apoios</string>
    <string name="oc_tree_cutting">Averiguação / Corte de árvore</string>
    <string name="oc_insect">Averiguação / Manejo de Inseto</string>
    <string name="oc_action_preventive">Ações Preventivas</string>
    <string name="oc_other">Diversos</string>
    <string name="oc_fire">Incêncio</string>
    <string name="oc_nao_atendida">Ocorrência não Atendida</string>
    <string name="oc_dangerous_product">Produtos Perigosos</string>
    <string name="oc_search_rescue">Salvamento / Busca / Resgate</string>

    <string name="link_app_store"><a href="http://somesite.com/">Firecast Comunidade</a></string>
    <plurals name="cars_dispatched">
        <item quantity="zero">Nenhuma viatura a caminho</item>
        <item quantity="one">Uma viatura a caminho</item>
        <item quantity="many">%d viaturas a caminho</item>
    </plurals>


    <!-- TODO:Ver uso -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="horario_nao_notificar">Horário para não notificar</string>
    <string name="start">Início</string>
    <string name="finish">Fim</string>
    <string name="with_sound">Com Som</string>
    <string name="vibrate">Vibrar</string>


</resources>
