<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gabriela.firecastcommunity.drawer.FilterOcActivity"
    tools:showIn="@layout/activity_filter_oc">

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/city_spinner"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/distance_km_seek"
            android:layout_marginTop="20dp"
            android:id="@+id/txtSeekBar"
            android:gravity="center"
            />

        <SeekBar
            android:id="@+id/distance_seekbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/occurence_type"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/car_accident_icon" />
            <CheckBox
                android:id="@+id/oc_accident_car"
                android:text="@string/oc_accident_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/paramedics_icon" />
            <CheckBox
                android:id="@+id/oc_paramedics"
                android:text="@string/oc_paramedics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/support_icon" />
            <CheckBox
                android:id="@+id/oc_support"
                android:text="@string/oc_support"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/tree_cutting_icon" />
            <CheckBox
                android:id="@+id/oc_tree_cutting"
                android:text="@string/oc_tree_cutting"
                android:layout_width="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/insect_control_icon" />
            <CheckBox
                android:id="@+id/oc_insect"
                android:text="@string/oc_insect"
                android:layout_width="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/tree_cutting_icon" />
            <CheckBox
                android:id="@+id/oc_action_preventive"
                android:text="@string/oc_action_preventive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/other_icon" />
            <CheckBox
                android:id="@+id/oc_other"
                android:text="@string/oc_other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/fire_icon" />
            <CheckBox
                android:id="@+id/oc_fire"
                android:text="@string/oc_fire"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/other_icon" />
            <CheckBox
                android:id="@+id/oc_nao_atendida"
                android:text="@string/oc_nao_atendida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/dangerous_product_icon" />
            <CheckBox
                android:id="@+id/oc_dangerous_product"
                android:text="@string/oc_dangerous_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_gravity="right"
                android:layout_height="30dp"
                android:src="@drawable/search_rescue_icon" />
            <CheckBox
                android:id="@+id/oc_search_rescue"
                android:text="@string/oc_search_rescue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
